<resources>
    <string name="app_name">TPAMOV-Android</string>
    <string name="menu_title">ReversISEC</string>
    <string name="btn_OnePlayer">One Player</string>
    <string name="btn_TwoPlayers">Two Players</string>
    <string name="btn_Multiplayer">Multiplayer</string>
    <string name="menu_item_profile">Manage Profile</string>
    <string name="menu_item_history">History</string>

    //Strings for the ManageProfileActivity
    <string name="manage_profile_title">Manage Profile</string>
    <string name="manage_profile_setName">Name:</string>
    <string name="btn_take_picture">Take Photo</string>

    //String for Menus
    <string name="confirm_menu">Confirm Profile</string>

    //Strings For Client/Server Menu
    <string name="btn_server">Server</string>
    <string name="btn_client">Client</string>
</resources>
